--- a/nieruchomości/Views/Home/_ContactForm.cshtml
+++ b/nieruchomości/Views/Home/_ContactForm.cshtml
@@ -1,73 +1,33 @@
 ﻿@model Models.ContactEmail
 
-@if (!ViewData.ModelState.IsValid)
-{
-    <div class="row" style="padding: 10px" id="danger-panel">
-        <div class="panel panel-danger">
-            <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
-            <div class="panel-heading">
-                Błąd
-            </div>
-            <div class="panel-body">
-                @Html.ValidationSummary()
-            </div>
-        </div>
-    </div>
-}
-
 @using (Html.BeginForm("Show", "Home", new { key = ViewContext.ViewData.ModelState["key"].Value.AttemptedValue}, FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    <div class="form-group-sm">
-        <div class="row" style="margin-bottom:5px">
-            <div class="col-md-4">
-                <sup><b style="font-size: 14px; color:red">*</b></sup><small>Imię i Nazwisko:</small>
-            </div>
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control", @style = "max-width: none" } })
-            </div>
-        </div>
+    <div class="row">
+        <div class="col-md-12">
+            <p style="font-size:12px">Chętnie odpowiemy na wszystkie Twoje pytania dotyczące tej nieruchomości.<br/> Możesz zadzwonić do nas na numer tel. 570 170 007 lub skorzystać z poniższego formularza kontaktowego.</p>
 
-        <div class="row" style="margin-bottom:5px">
-            <div class="col-md-4">
-                <sup><b style="font-size: 14px; color: red">*</b></sup><small>Email:</small>
-            </div>
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @style = "max-width: none" } })
-            </div>
         </div>
-
-        <div class="row" style="margin-bottom: 5px">
-            <div class="col-md-4">
-                <small>Telefon:</small>
-            </div>
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.PhoneNumber, new {htmlAttributes = new {@class = "form-control", @style = "max-width: none"}})
-            </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            @Html.ValidationMessageFor(x => x.Body, "", new {@class = "error-feedback"})
+            @Html.TextAreaFor(x => x.Body, new {@class = "contact-form-input", @style = "height:100px;", @placeholder = "Treść Twojej wiadomości"})
         </div>
-        <div class="row" style="margin-bottom: 5px">
-            <div class="col-md-4">
-                <sup><b style="font-size: 14px; color: red">*</b></sup><small>Wiadomość:</small>
-            </div>
-            <div class="col-md-8">
-                @Html.TextAreaFor(model => model.Body, new {@class = "form-control", @style = "max-width: none; height:100px"})
-            </div>
-        </div>
-        <div class="row">
-            <input type="hidden" name="OfferLink" value="@Request.RawUrl"/>
-        </div>
-        <div class="row">
-            <div class="col-md-8 pull-right" style="text-align: center">
-                <button type="submit" class="btn btn-sm btn-primary" style="width: 100%">Wyślij</button>
-            </div>
-            <div class="col-md-8" style="color:red">
-                <small>Pola oznaczone gwiazdką są wymagane!</small>
-            </div>
+    </div>
+    <div class="row" style="margin-top: 10px">
+        <div class="col-md-4">@Html.ValidationMessageFor(x => x.FullName, "", new { @class = "error-feedback" })</div>
+        <div class="col-md-4">@Html.ValidationMessageFor(x => x.Email, "", new { @class = "error-feedback" })</div>
+        <div class="col-md-4">@Html.ValidationMessageFor(x => x.PhoneNumber, "", new { @class = "error-feedback" })</div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">@Html.TextBoxFor(x => x.FullName, new { @class = "contact-form-input", @style = "height:25px;", @placeholder = "Twoje imię i nazwisko" })</div>
+        <div class="col-md-4">@Html.TextBoxFor(x => x.Email, new { @class = "contact-form-input", @style = "height:25px;", @placeholder = "Twój adres e-mail" })</div>
+        <div class="col-md-4">@Html.TextBoxFor(x => x.PhoneNumber, new { @class = "contact-form-input", @style = "height:25px;", @placeholder = "Twój numer telefonu (opcjonalne)" })</div>
+    </div>
+    <div class="row" style="margin-top:10px">
+        <div class="col-md-12" style="text-align: right">
+            <button type="submit" class="menu-item-button" style="width: 200px; height: 40px; background-color:#B71C1C">Wyślij zapytanie</button>
         </div>
     </div>
 }
-<script type="text/javascript">
-    $(".close").on("click", function() {
-        $("#danger-panel")[0].remove();
-    });
-</script>
