--- a/nieruchomości/Views/Shared/_Layout.cshtml
+++ b/nieruchomości/Views/Shared/_Layout.cshtml
@@ -10,32 +10,54 @@
     <link href="~/Content/ng-grid.css" rel="stylesheet" type="text/css"/>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <link rel="stylesheet" type="text/css" href="/Content/CSS/Site.css" />
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <script language="javascript" src="/Scripts/jquery-1.10.2.js"></script>
+    <link href="~/Scripts/fancyapps-fancyBox-18d1712/source/jquery.fancybox.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="/Scripts/fancyapps-fancyBox-18d1712/source/jquery.fancybox.js"></script>
     <meta name="description" content="The description of my page"/>
 </head>
 <body>
 <div class="container">
-    <div class="col-md-12 body-content" style="padding-bottom: 20px;">
+    <div class="col-md-12 body-content" style="padding-bottom: 20px; padding-right: 0px;">
+        <div class="row" style="padding-top:20px; padding-left: 20px; padding-right: 20px;">
+            <div class="col-md-6">
+                <img src="~/Content/img/logo.png"/>
+            </div>
+            <div class="col-md-6" style="text-align: right; font-size: 30px; font-weight: bold; color:#757575">
+                tel. 570 170 007
+            </div>
+        </div>
+        <div class="row" style="margin-top:200px">
+            <div class="col-md-12">
+
+            </div>
+        </div>
         <div class="col-md-3">
             <div class="row">
                 <div class="left-menu">
-                    <div class="menu-item">Strona główna</div>
-                    <div class="menu-item">O firmie</div>
+                    <a class="menu-item-link" href="/Home/">
+                        <div class="menu-item">Strona główna</div></a>
+                    <a class="menu-item-link" href="/Home/About"><div class="menu-item">O firmie</div></a>
                     <div class="menu-item">Kredyty</div>
                     <div class="menu-item">Oferty:</div>
                     @{ Html.RenderAction("Cities", "Home"); }
                     <div class="menu-item-searcher">
+                        @using(Html.BeginForm("Show", "Home", FormMethod.Get)){
                         <div class="menu-item">Wyszukaj ofertę:</div>
                         <div class="row">
                             <div class="col-md-7">
-                                <input class="form-control menu-item-input" placeholder="Numer oferty?"/>
+                                <input class="form-control menu-item-input" name="Key" placeholder="Numer oferty?" style="height: 30px; font-size: 12px;" />
                             </div>
                             <div class="col-md-5" style="padding-left: 0px">
-                                <button class="menu-item-button">Znajdź</button>
+                                <button type="submit" class="menu-item-button">Znajdź</button>
                             </div>
                         </div>
+                        }
                     </div>
-                    <div class="menu-item">Dodaj własną ofertę</div>
-                    <div class="menu-item">Skontaktuj się z nami</div>
+                    <a class="menu-item-link" href="/Home/CreateOffer"><div class="menu-item">Dodaj własną ofertę</div></a>
+                    <a class="menu-item-link" href="/Home/Contact"><div class="menu-item">Skontaktuj się z nami</div></a>
                     <div class="menu-item-contact">
                         <div class="menu-item-contact-phone">
                             <div class="row">
@@ -57,22 +79,28 @@
                     <div class="menu-item-social-media">
                         <div class="row">
                             <div class="col-md-6 pull-right">
-                                <div class="col-md-4"><img src="/Content/img/icons/social-32-twitter.png" /></div>
-                                <div class="col-md-4"><img src="/Content/img/icons/social-3-google-plus.png" /></div>
-                                <div class="col-md-4"><img src="/Content/img/icons/social-31-facebook.png" /></div>
+                                <div class="col-md-4"><img src="/Content/img/icons/social-32-twitter.png"/>
+                                </div>
+                                <div class="col-md-4"><img src="/Content/img/icons/social-3-google-plus.png"/>
+                                </div>
+                                <div class="col-md-4"><img src="/Content/img/icons/social-31-facebook.png"/>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row" style="margin-top:20px">
+            <div class="row">
+                <img src="~/Content/img/mainmenu_slant.png" width="100%"/>
+            </div>
+            <div class="row">
                 <div class="left-newest">
                     <div class="left-newest-title">Ostatnio dodane:</div>
                     @{Html.RenderAction("NewestAdverts", "Home");}
                 </div>
             </div>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9" style="padding-right: 0px;">
             @RenderBody()
         </div>
 
@@ -119,4 +147,23 @@
         </div>
     </div>
 </footer>
-<link rel="stylesheet" type="text/css" href="/Content/CSS/Site.css"/>
+
+<script type="text/javascript">
+    Number.prototype.formatMoney = function (places, symbol, thousand, decimal) {
+        places = !isNaN(places = Math.abs(places)) ? places : 2;
+        symbol = symbol !== undefined ? symbol : "$";
+        thousand = thousand || ",";
+        decimal = decimal || ".";
+        var number = this,
+            negative = number < 0 ? "-" : "",
+            i = parseInt(number = Math.abs(+number || 0).toFixed(places), 10) + "",
+            j = (j = i.length) > 3 ? j % 3 : 0;
+        return symbol + negative + (j ? i.substr(0, j) + thousand : "") + i.substr(j).replace(/(\d{3})(?=\d)/g, "$1" + thousand) + (places ? decimal + Math.abs(number - i).toFixed(places).slice(2) : "");
+    };
+    var prices = $(".pln");
+    for (var i = 0; i < prices.length; i++) {
+        var value = +prices[i].innerHTML;
+        var formattedValue = value.formatMoney(0, "", " ");
+        prices[i].innerHTML = formattedValue;
+    }
+</script>
