--- a/nieruchomości/Views/Home/Credits.cshtml
+++ b/nieruchomości/Views/Home/Credits.cshtml
@@ -1,1 +1,29 @@
-﻿<h1>Todo</h1>
+﻿<div class="col-md-12">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-3 short-advert-label">
+                        Kredyty
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-12 short-advert-body">
+                        <p style="font-size: 12px;">
+                            <b>Współpracujemy z Domem Kredytowym zapewniającym naszym klientom pełną gamę produktów finansowych: kredyty hipoteczne, refinansowe, konsolidacyjne, inwestycyjne; produkty inwestycyjno - oszczędnościowe; produkty ubezpieczeniowe.</b>
+                            <br/><br/>
+                            Firma funkcjonuje na rynku doradztwa finansowego od marca 2004 roku, aktualnie jest jedną z trzech największych firm doradztwa finansowego w Polsce. Dom kredytowy jest firmą doradczą działającą w sektorze finansów osobistych, specjalizującą się w kredytach hipotecznych. Oferta obejmuje również produkty inwestycyjne najlepszych towarzystw funduszy inwestycyjnych i towarzystw ubezpieczeń na życie.
+                            Misją Domu Kredytowego jest niezależne doradztwo w wyborze najlepszej oferty z szerokiej palety produktów finansowych, z uwzględnieniem przede wszystkim potrzeb i oczekiwań Klienta. Atutami firmy są niezależność oraz bezstronność.
+                            Porada kredytowa uwzględniająca faktyczne potrzeby klienta. Doradcy finansowi negocjują indywidualne warunki kredytu dla Klienta. Firma zapewnia indywidualną opiekę jednego doradcy od pierwszego kontaktu do wypłaty środków przez bank. Spotkania z doradcą odbywają się w dogodnym dla Klienta miejscu i terminie. Dostęp do kredytu jest szybszy dzięki uproszczonym procedurom.
+
+                            <br/><br/>
+                            <b>USŁUGI CAŁKOWICIE BEZPŁATNE DLA KLIENTA Zapraszamy do współpracy !!!</b>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
