--- a/nieruchomości/Views/Shared/_Layout.cshtml
+++ b/nieruchomości/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                     <a class="menu-item-link" href="/Home/">
                         <div class="menu-item">Strona główna</div></a>
                     <a class="menu-item-link" href="/Home/About"><div class="menu-item">O firmie</div></a>
-                    <div class="menu-item">Kredyty</div>
+                    <a class="menu-item-link" href="/Home/Credits"><div class="menu-item">Kredyty</div></a>
                     <div class="menu-item">Oferty:</div>
                     @{ Html.RenderAction("Cities", "Home"); }
                     <div class="menu-item-searcher">
