--- a/nieruchomości/Views/Admin/_addFlat.cshtml
+++ b/nieruchomości/Views/Admin/_addFlat.cshtml
@@ -105,7 +105,17 @@
                 <div class="row">
                     <div class="col-md-12">
                         <small>Szczegóły:</small>
-                        @Html.EditorFor(model => model.Details, new { htmlAttributes = new { @class = "form-control", @style = "resize: none; max-width: none; height:200px" + ((ViewData.ModelState.ContainsKey("Details") && ViewData.ModelState["Details"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                        @Html.EditorFor(model => model.Details, new {htmlAttributes = new {@class = "form-control", @style = "resize: none; max-width: none; height:200px" + ((ViewData.ModelState.ContainsKey("Details") && ViewData.ModelState["Details"].Errors.Count > 0) ? ";border: 2px solid red" : "")}})
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <small>Lat:</small>
+                        @Html.EditorFor(model => model.Cords.Lat, new { htmlAttributes = new { @class = "form-control", @style = "resize: none; max-width: none; height:200px"}})
+                    </div>
+                    <div class="col-md-6">
+                        <small>Lng:</small>
+                        @Html.EditorFor(model => model.Cords.Lng, new { htmlAttributes = new { @class = "form-control", @style = "resize: none; max-width: none; height:200px"}})
                     </div>
                 </div>
             </div>
